--- a/events/templates/dashboard/dashboard.html
+++ b/events/templates/dashboard/dashboard.html
@@ -57,7 +57,7 @@
                             <td class="py-3 px-4 border-b border-gray-300">{{event.date}}</td>
                             <td class="py-3 px-4 border-b border-gray-300">{{event.location}}</td>
                             <td class="py-3 px-4 border-b border-gray-300">
-                                <a  class="text-indigo-500 hover:text-indigo-700">
+                                <a href="{% url 'update_event' event.id %}" class="text-indigo-500 hover:text-indigo-700">
                                     <i class="fas fa-edit"></i>
                                 </a>
                                 <a href="#" class="text-indigo-500 hover:text-indigo-700 ml-4" onclick="openModal('{{ event.id }}')">
