--- a/events/templates/dashboard/dashboard.html
+++ b/events/templates/dashboard/dashboard.html
@@ -14,8 +14,11 @@
     <div class="container mx-auto mt-8">
         <h1 class="text-4xl font-bold mb-8 text-[#4F46E5]">Organizer Dashboard</h1>
         <a href="{% url "home" %}">
-                 <button class="bg-[#4F46E5] text-white px-3 py-2 rounded-md text-sm font-medium hover:bg-indigo-700">Go To Home</button>
-                </a>
+         <button class="bg-[#4F46E5] text-white px-3 py-2 rounded-md text-sm font-medium hover:bg-indigo-700">Go To Home</button>
+        </a>
+        <a href="{% url "create-event" %}">
+        <button class="bg-[#4F46E5] text-white px-3 py-2 rounded-md text-sm font-medium hover:bg-indigo-700">Create Event</button>
+        </a>
         <div class="grid grid-cols-1 mt-2 md:grid-cols-2 lg:grid-cols-4 gap-6 mb-10">
             <div class="bg-indigo-200 p-6 rounded shadow">
                 <h2 class="text-2xl font-semibold text-[#4F46E5]"><i class="fas fa-users"></i> Total Participants</h2>
@@ -27,17 +30,24 @@
                 <p class="text-3xl text-gray-800">{{total_event}}</p>
             </div>
             </a>
-            <div class="bg-indigo-200 p-6 rounded shadow">
+            
+            
+            <a href="{% url 'dashboard' %}?type=upcoming">
+                <div class="bg-indigo-200 p-6 rounded shadow">
                 <h2 class="text-2xl font-semibold text-[#4F46E5]"><i class="fas fa-calendar-check"></i> Upcoming Events</h2>
-                <p class="text-3xl text-gray-800">{{total_event}}</p>
+                <p class="text-3xl text-gray-800">{{upcoming_events_count}}</p>
             </div>
-            <div class="bg-indigo-200 p-6 rounded shadow">
+            </a>
+
+            <a href="{% url 'dashboard' %}?type=past-event">
+                <div class="bg-indigo-200 p-6 rounded shadow">
                 <h2 class="text-2xl font-semibold text-[#4F46E5]"><i class="fas fa-calendar-times"></i> Past Events</h2>
-                <p class="text-3xl text-gray-800">{{total_event}}</p>
+                <p class="text-3xl text-gray-800">{{past_events}}</p>
             </div>
+            </a>
         </div>
         <div class="bg-indigo-50 p-6 rounded shadow">
-            <h2 class="text-2xl font-semibold mb-6 text-[#4F46E5]">Today's Events</h2>
+            <h2 class="text-2xl font-semibold mb-6 text-[#4F46E5]">All Of Our Events</h2>
             <div class="overflow-x-auto">
                 <table class="min-w-full bg-white">
                     <thead>
