--- a/events/templates/home_page/home_page.html
+++ b/events/templates/home_page/home_page.html
@@ -30,23 +30,38 @@
                         </button>
                          <div class="absolute mt-2 w-48 rounded-md shadow-lg bg-white ring-1 ring-black ring-opacity-5 hidden group-hover:block">
                              <div class="py-1" role="menu" aria-orientation="vertical" aria-labelledby="options-menu">
-                                <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-[#E0E7FF] hover:text-[#4F46E5]" role="menuitem">Upcoming Events</a>
-                                <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-[#E0E7FF] hover:text-[#4F46E5]" role="menuitem">Past Events</a>
-                                <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-[#E0E7FF] hover:text-[#4F46E5]" role="menuitem">All Events</a>
+                                <a href="{% url 'dashboard' %}?type=upcoming" class="block px-4 py-2 text-sm text-gray-700 hover:bg-[#E0E7FF] hover:text-[#4F46E5]" role="menuitem">Upcoming Events</a>
+                                <a href="{% url 'dashboard' %}?type=pending" class="block px-4 py-2 text-sm text-gray-700 hover:bg-[#E0E7FF] hover:text-[#4F46E5]" role="menuitem">Past Events</a>
+                                <a href="{% url 'dashboard' %}?type=total-event" class="block px-4 py-2 text-sm text-gray-700 hover:bg-[#E0E7FF] hover:text-[#4F46E5]" role="menuitem">All Events</a>
                                 </div>
                             </div>
                         </div>
-                        <a href="#" class="text-gray-900 inline-flex items-center px-1 pt-1 border-b-2 border-transparent text-sm font-medium hover:border-[#4F46E5]">About</a>
                          </div>
                         </div>
-                    <div class="hidden sm:ml-6 sm:flex sm:items-center">
-                        <a href="{% url "create-event" %}">
-                        <button class="bg-[#4F46E5] text-white px-3 py-2 rounded-md text-sm font-medium hover:bg-indigo-700">Create Event</button>
-
+                        {% if user.is_authenticated %}
+                            <div class="hidden sm:ml-6 sm:flex sm:items-center">
+                                    <a href="{% url 'create-event' %}">
+                                        <button class="bg-[#4F46E5] text-white px-3 py-2 rounded-md text-sm font-medium hover:bg-indigo-700">Create Event</button>
+                                    </a>
+                                    <a href="{% url 'dashboard' %}">
+                                        <button class="ml-4 bg-[#E0E7FF] text-[#4F46E5] px-3 py-2 rounded-md text-sm font-medium hover:bg-indigo-200">Dashboard</button>
+                                    </a>
+                                    <form action="{% url 'sign-out' %}" method="POST">
+                                        {% csrf_token %}
+                                        <button class="ml-4 bg-[#E0E7FF] text-[#4F46E5] px-3 py-2 rounded-md text-sm font-medium hover:bg-indigo-200">Sign Out</button>
+                                    </form>
+                            </div>
+                            {% else %}
+                                <div class="hidden sm:ml-6 sm:flex sm:items-center">
+                        <a href="{% url 'sign-up' %}">
+                            <button class="bg-[#4F46E5] text-white px-3 py-2 rounded-md text-sm font-medium hover:bg-indigo-700">Register</button>
                         </a>
-                        <a href="{% url "dashboard" %}">
-                            <button class="ml-4 bg-[#E0E7FF] text-[#4F46E5] px-3 py-2 rounded-md text-sm font-medium hover:bg-indigo-200">Dashboard</button></a>
-                </div>
+                        <a href="{% url 'sign-in' %}">
+                            <button class="ml-4 bg-[#E0E7FF] text-[#4F46E5] px-3 py-2 rounded-md text-sm font-medium hover:bg-indigo-200">Login</button>
+                        </a>
+                    </div>
+                        {% endif %}
+                    
                 <div class="-mr-2 flex items-center sm:hidden">
                 <button id="mobile-menu-button" class="inline-flex items-center justify-center p-2 rounded-md text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:bg-gray-100 focus:text-gray-500">
                     <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -60,9 +75,16 @@
             <div class="pt-2 pb-3 space-y-1">
                 <a href="#" class="block pl-3 pr-4 py-2 border-l-4 border-transparent text-base font-medium text-gray-900 hover:border-[#4F46E5]">Home</a>
                 <a href="#" class="block pl-3 pr-4 py-2 border-l-4 border-transparent text-base font-medium text-gray-900 hover:border-[#4F46E5]">About</a>
-                <a href="#" class="block pl-3 pr-4 py-2 border-l-4 border-transparent text-base font-medium text-gray-900 hover:border-[#4F46E5]">Events</a>
-                <a href="#" class="block pl-3 pr-4 py-2 border-l-4 border-transparent text-base font-medium text-gray-900 hover:border-[#4F46E5]">About</a>
+                <a href="{% url 'dashboard' %}?type=total-event" class="block pl-3 pr-4 py-2 border-l-4 border-transparent text-base font-medium text-gray-900 hover:border-[#4F46E5]">Events</a>
             </div>
+            <div class="mb-2">
+                        <a href="{% url "create-event" %}">
+                        <button class="bg-[#4F46E5] text-white px-3 py-2 rounded-md text-sm font-medium hover:bg-indigo-700">Create Event</button>
+
+                        </a>
+                        <a href="{% url "dashboard" %}">
+                            <button class="ml-4 bg-[#E0E7FF] text-[#4F46E5] px-3 py-2 rounded-md text-sm font-medium hover:bg-indigo-200">Dashboard</button></a>
+                </div>
         </div>
     </nav>
 
@@ -73,8 +95,8 @@
             <h1 class="text-4xl md:text-5xl font-bold text-[#1F2937] mb-4">Everything You Need to Plan Perfect Events</h1>
             <p class="text-lg md:text-xl text-gray-700 mb-8">Plan, manage, and execute with ease using our powerful event management system.</p>
             <div class="flex justify-center md:justify-start space-x-4">
-                <a href="" class="bg-[#4F46E5] hover:bg-indigo-700 text-white font-bold py-2 px-4 rounded transition duration-300 animate-bounce">All Events</a>
-                <a href="" class="bg-[#E0E7FF] hover:bg-indigo-200 text-[#4F46E5] font-bold py-2 px-4 rounded transition duration-300 animate-bounce">Upcoming Events</a>
+                <a href="{% url 'dashboard' %}?type=total-event" class="bg-[#4F46E5] hover:bg-indigo-700 text-white font-bold py-2 px-4 rounded transition duration-300 animate-bounce">All Events</a>
+                <a href="{% url 'dashboard' %}?type=upcoming" class="bg-[#E0E7FF] hover:bg-indigo-200 text-[#4F46E5] font-bold py-2 px-4 rounded transition duration-300 animate-bounce">Upcoming Events</a>
             </div>
         </div>
         <div class="md:w-1/2 mt-8 md:mt-0 animate-slide-in">
