--- a/events/templates/create_event/create_event.html
+++ b/events/templates/create_event/create_event.html
@@ -102,8 +102,7 @@
                 </a>
                 
                 </div>
-
-                 <div>
+            <div>
     {% if messages %}
         {% for message in messages %}
             <p class="
@@ -119,7 +118,7 @@
     {% endif %}
 </div>
         </div>
-    <form method="POST">
+    <form method="POST" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit" class="bg-indigo-500 text-white px-4 py-2 rounded">Submit</button>
