--- a/events/templates/details/details.html
+++ b/events/templates/details/details.html
@@ -13,7 +13,7 @@
     <section id="event-detail" class="py-8 bg-gray-100 text-gray-900">
     <div class="container mx-auto px-4">
         <div class="bg-white shadow-md rounded-lg overflow-hidden">
-            <img src="{% static 'image/event.jpg' %}" alt="Event Detail Image" class="w-1/2 h-64 object-cover">
+            <img src={{event.asset.url}} alt="Event Detail Image" class="w-1/2 h-64 object-cover">
             <div class="p-6">
                 <h2 class="text-3xl font-bold text-gray-800 mb-4">{{event.name}}</h2>
                 <p class="text-gray-600 mb-4">{{event.description}}</p>
