--- a/events/templates/home_page/home_page.html
+++ b/events/templates/home_page/home_page.html
@@ -125,7 +125,7 @@
             <p class="text-red-500">Event Not Found.Search with Name and Location</p>{% endif %}
             {% for event in events %}
         <div class="bg-[#E0E7FF] hover:bg-indigo-200 rounded-lg shadow-lg overflow-hidden w-80 transform transition duration-500 hover:scale-105 hover:shadow-2xl">
-        <img src="{% static 'image/event.jpg' %}" alt="Event 1" class="w-full h-48 object-cover">
+        <img src={{event.asset.url}} alt="Event 1" class="w-full h-48 object-cover">
         <div class="p-4">
             <h3 class="text-xl font-bold text-gray-800">{{event.name}}</h3>
             <h4 class="text-md text-gray-600">{{event.description}}</h4>
