--- a/events/templates/details/details.html
+++ b/events/templates/details/details.html
@@ -34,9 +34,15 @@
                      <span class="text-gray-800">{{par}}</span>
                 {% endfor %}</p></span></p>      
                 <a href="{% url "home" %}">
-                <button class="bg-indigo-600 text-white font-bold py-2 px-4 rounded transition duration-300 hover:bg-indigo-700">Return Home</button>
+                <button class="bg-indigo-600  text-white font-bold py-2 px-4 rounded transition duration-300 hover:bg-indigo-700">Return Home</button>
                 </a>
-                <button class="bg-indigo-600 disabled text-white font-bold py-2 px-4 rounded transition duration-300 hover:bg-indigo-700">Register Now</button>
+                {% if user.is_authenticated %}
+            <a href="{% url 'rsvp_event' event.id %}">
+             <button class="bg-[#4F46E5] mt-2 text-white hover:text-[#4F46E5] py-2 px-4 rounded hover:bg-indigo-200 transition duration-300 flex items-center">
+                RSVP
+            </button>
+           </a>
+           {% endif %}
             </div>
         </div>
     </div>
