--- a/events/templates/home_page/home_page.html
+++ b/events/templates/home_page/home_page.html
@@ -88,6 +88,7 @@
 
    
  <main>
+    
 
     {% comment %} hero section {% endcomment %}
     <section class="flex flex-col md:flex-row items-center justify-between py-12 px-4 sm:px-6 lg:px-8 bg-[#f3f4f6]">
@@ -117,10 +118,29 @@
         <input type="text" name="q" id="search" placeholder="Search events..." class="border rounded px-4 py-2 w-1/3" value="{{ query }}">
         <button type="submit" class="bg-[#4F46E5] hover:bg-indigo-700 text-white font-bold py-2 px-4 rounded ml-2">Search</button>
     </form>
+    
+        </div>
+
+        <div class="w-1/2 mx-auto mt-2 text-center mb-6">
+             {% if messages %}
+            {% for message in messages %}
+            <p class="
+                {% if message.tags == 'error' %}
+                    text-red-500
+                {% elif message.tags == 'success' %}
+                    text-green-500
+                {% elif message.tags == 'info' %}
+                    text-blue-700
+                {% endif %} 
+                text-xl">
+                {{ message }}
+            </p>
+        {% endfor %}
+    {% endif %}
         </div>
         <div class="events-list grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
             {% comment %} card start {% endcomment %}
-
+            
             {% if message %}
             <p class="text-red-500">Event Not Found.Search with Name and Location</p>{% endif %}
             {% for event in events %}
@@ -143,8 +163,9 @@
             </p>
             <p class="text-gray-600 font-semibold mt-2">Category: <span class="text-gray-800">{{event.category.name}}</span></p>
             <p class="text-gray-600 font-semibold mt-2">Participate:{% for par in event.participant.all %}
-                     <span class="text-gray-800">{{par}}</span>
-                {% endfor %}</p>
+            <span class="text-gray-800">{{par}}</span>
+            {% endfor %}</p>
+            
         </div>
         <div class="p-4 flex justify-between">
            <a href="{% url "event_details" event.id %}">
@@ -155,9 +176,23 @@
                 View Details
             </button>
            </a>
+           {% if user.is_authenticated %}
+            {% if rsvp_exists == True %}
+            <button class="bg-[#4F46E5] text-white hover:text-[#4F46E5] py-2 px-4 rounded hover:bg-indigo-200 transition duration-300 flex items-center">
+                Already RSVP
+            </button>
+                
+            {% endif %}
+            <a href="{% url 'rsvp_event' event.id %}">
+             <button class="bg-[#4F46E5] text-white hover:text-[#4F46E5] py-2 px-4 rounded hover:bg-indigo-200 transition duration-300 flex items-center">
+                RSVP
+            </button>
+           </a>
+           {% endif %}
         </div>
     </div>
             {% endfor %}
+            
            
             {% comment %} card end {% endcomment %}
         </div>
