--- a/events/templates/admin/dashboard.html
+++ b/events/templates/admin/dashboard.html
@@ -19,19 +19,13 @@
                     <a href="#" class="text-gray-900 inline-flex items-center px-1 pt-1 border-b-2 border-transparent text-sm font-medium hover:border-[#4F46E5]">Home</a>
                     <a href="{% url 'create-group' %}" class="text-gray-900 inline-flex items-center px-1 pt-1 border-b-2 border-transparent text-sm font-medium hover:border-[#4F46E5]">Create Group</a>
                     <div class="relative group items-center">
-                        <button class="text-gray-900 inline-flex items-center px-1 pt-1 border-b-2 border-transparent text-sm font-medium hover:border-[#4F46E5] focus:outline-none">
-                            Events
-                            <svg class="ml-2 h-5 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
-                                <path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd" />
-                            </svg>
+                          <a href="{% url 'group-list' %}">
+                            <button class="text-gray-900 inline-flex items-center px-1 pt-1 border-b-2 border-transparent text-sm font-medium hover:border-[#4F46E5] focus:outline-none">
+                            Group List
                         </button>
-                         <div class="absolute mt-2 w-48 rounded-md shadow-lg bg-white ring-1 ring-black ring-opacity-5 hidden group-hover:block">
-                             <div class="py-1" role="menu" aria-orientation="vertical" aria-labelledby="options-menu">
-                                <a href="{% url 'dashboard' %}?type=upcoming" class="block px-4 py-2 text-sm text-gray-700 hover:bg-[#E0E7FF] hover:text-[#4F46E5]" role="menuitem">Upcoming Events</a>
-                                <a href="{% url 'dashboard' %}?type=pending" class="block px-4 py-2 text-sm text-gray-700 hover:bg-[#E0E7FF] hover:text-[#4F46E5]" role="menuitem">Past Events</a>
-                                <a href="{% url 'dashboard' %}?type=total-event" class="block px-4 py-2 text-sm text-gray-700 hover:bg-[#E0E7FF] hover:text-[#4F46E5]" role="menuitem">All Events</a>
-                                </div>
-                            </div>
+                          </a>
+                     
+                        
                         </div>
                          </div>
                         </div>
