--- a/events/templates/details/details.html
+++ b/events/templates/details/details.html
@@ -36,12 +36,20 @@
                 <a href="{% url "home" %}">
                 <button class="bg-indigo-600  text-white font-bold py-2 px-4 rounded transition duration-300 hover:bg-indigo-700">Return Home</button>
                 </a>
-                {% if user.is_authenticated %}
-            <a href="{% url 'rsvp_event' event.id %}">
-             <button class="bg-[#4F46E5] mt-2 text-white hover:text-[#4F46E5] py-2 px-4 rounded hover:bg-indigo-200 transition duration-300 flex items-center">
+               {% if user.is_authenticated %}
+           {% if request.user in event.participant.all %}
+                    <button class= "disabled bg-gray-300  hover:text-[#4F46E5] py-2 px-4 rounded hover:bg-indigo-200 transition duration-300 flex items-center">
+                      <svg class="mr-2" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="20" height="20" viewBox="0 0 48 48">
+                      <path fill="#4caf50" d="M44,24c0,11.045-8.955,20-20,20S4,35.045,4,24S12.955,4,24,4S44,12.955,44,24z"></path><path fill="#ccff90" d="M34.602,14.602L21,28.199l-5.602-5.598l-2.797,2.797L21,33.801l16.398-16.402L34.602,14.602z"></path>
+                        </svg> RSVP'd
+                    </button>
+           {% else %}
+            <a href="{% url 'rsvp-event' event.id %}">
+             <button class="bg-[#4F46E5] text-white hover:text-[#4F46E5] py-2 px-4 rounded hover:bg-indigo-200 transition duration-300 flex items-center">
                 RSVP
             </button>
            </a>
+           {% endif %}
            {% endif %}
             </div>
         </div>
