--- a/events/templates/home_page/home_page.html
+++ b/events/templates/home_page/home_page.html
@@ -39,26 +39,31 @@
                         </div>
                         {% if user.is_authenticated %}
                             <div class="hidden sm:ml-6 sm:flex sm:items-center">
-                                    <a href="{% url 'create-event' %}">
-                                        <button class="bg-[#4F46E5] text-white px-3 py-2 rounded-md text-sm font-medium hover:bg-indigo-700">Create Event</button>
-                                    </a>
-                                    <a href="{% url 'dashboard' %}">
-                                        <button class="ml-4 bg-[#E0E7FF] text-[#4F46E5] px-3 py-2 rounded-md text-sm font-medium hover:bg-indigo-200">Dashboard</button>
-                                    </a>
+                                    {% if user.is_staff %}
+                                        <a href="{% url 'admin-dashboard' %}">
+                                            <button class="bg-[#4F46E5] text-white px-3 py-2 mr-2 rounded-md text-sm font-medium hover:bg-indigo-700">Admin Dashboard</button>
+                                        </a>
+                                    {% endif %}
+                                        <a href="{% url 'create-event' %}">
+                                            <button class="bg-[#4F46E5] text-white px-3 py-2 rounded-md text-sm font-medium hover:bg-indigo-700">Create Event</button>
+                                        </a>
+                                        <a href="{% url 'dashboard' %}">
+                                            <button class="ml-4 bg-[#E0E7FF] text-[#4F46E5] px-3 py-2 rounded-md text-sm font-medium hover:bg-indigo-200">Dashboard</button>
+                                        </a>
                                     <form action="{% url 'sign-out' %}" method="POST">
                                         {% csrf_token %}
                                         <button class="ml-4 bg-[#E0E7FF] text-[#4F46E5] px-3 py-2 rounded-md text-sm font-medium hover:bg-indigo-200">Sign Out</button>
                                     </form>
-                            </div>
+                                </div>
                             {% else %}
                                 <div class="hidden sm:ml-6 sm:flex sm:items-center">
-                        <a href="{% url 'sign-up' %}">
-                            <button class="bg-[#4F46E5] text-white px-3 py-2 rounded-md text-sm font-medium hover:bg-indigo-700">Register</button>
-                        </a>
-                        <a href="{% url 'sign-in' %}">
-                            <button class="ml-4 bg-[#E0E7FF] text-[#4F46E5] px-3 py-2 rounded-md text-sm font-medium hover:bg-indigo-200">Login</button>
-                        </a>
-                    </div>
+                                    <a href="{% url 'sign-up' %}">
+                                        <button class="bg-[#4F46E5] text-white px-3 py-2 rounded-md text-sm font-medium hover:bg-indigo-700">Register</button>
+                                    </a>
+                                    <a href="{% url 'sign-in' %}">
+                                      <button class="ml-4 bg-[#E0E7FF] text-[#4F46E5] px-3 py-2 rounded-md text-sm font-medium hover:bg-indigo-200">Login</button>
+                                     </a>
+                                </div>
                         {% endif %}
                     
                 <div class="-mr-2 flex items-center sm:hidden">
@@ -72,16 +77,33 @@
             </div>
             <div id="mobile-menu" class="sm:hidden hidden">
             <div class="pt-2 pb-3 space-y-1">
-            <a href="{% url 'home' %}" class="block pl-3 pr-4 py-2 border-l-4 border-transparent text-base font-medium text-gray-900 hover:border-[#4F46E5]">Home</a>                <a href="{% url 'dashboard' %}?type=total-event" class="block pl-3 pr-4 py-2 border-l-4 border-transparent text-base font-medium text-gray-900 hover:border-[#4F46E5]">Events</a>
+            <a href="{% url 'home' %}" class="block pl-3 pr-4 py-2 border-l-4 border-transparent text-base font-medium text-gray-900 hover:border-[#4F46E5]">Home</a> 
+            <a href="{% url 'dashboard' %}?type=total-event" class="block pl-3 pr-4 py-2 border-l-4 border-transparent text-base font-medium text-gray-900 hover:border-[#4F46E5]">Events</a>
+            
             </div>
-            <div class="mb-2">
-                        <a href="{% url "create-event" %}">
-                        <button class="bg-[#4F46E5] text-white px-3 py-2 rounded-md text-sm font-medium hover:bg-indigo-700">Create Event</button>
-
-                        </a>
-                        <a href="{% url "dashboard" %}">
-                            <button class="ml-4 bg-[#E0E7FF] text-[#4F46E5] px-3 py-2 rounded-md text-sm font-medium hover:bg-indigo-200">Dashboard</button></a>
-                </div>
+            <div class="mb-2 flex flex-col gap-2">
+                        {% if user.is_authenticated %}
+                             {% if user.is_staff %}
+                            <a href="{% url 'admin-dashboard' %}">
+                                <button class="bg-[#4F46E5] text-white px-3 py-2 mr-2 rounded-md text-sm font-medium hover:bg-indigo-700">Admin Dashboard</button>
+                            </a>
+                            <a href="{% url 'dashboard' %}">
+                                <button class="bg-[#4F46E5] text-white px-3 py-2 mr-2 rounded-md text-sm font-medium hover:bg-indigo-700">Admin Dashboard</button>
+                            </a>
+                            <form action="{% url 'sign-out' %}" method="POST">
+                                {% csrf_token %}
+                                <button class="ml-4 bg-[#E0E7FF] text-[#4F46E5] px-3 py-2 rounded-md text-sm font-medium hover:bg-indigo-200">Sign Out</button>
+                            </form>
+                            {% endif %} 
+                            {% else %}
+                            <a href="{% url 'sign-up' %}">
+                            <button class="bg-[#4F46E5] text-white px-3 py-2 rounded-md text-sm font-medium hover:bg-indigo-700">Register</button>
+                            </a>
+                            <a href="{% url 'sign-in' %}">
+                            <button class="ml-4 bg-[#E0E7FF] text-[#4F46E5] px-3 py-2 rounded-md text-sm font-medium hover:bg-indigo-200">Login</button>
+                            </a>
+                        {% endif %}
+            </div>
         </div>
     </nav>
   </header>
@@ -177,17 +199,19 @@
             </button>
            </a>
            {% if user.is_authenticated %}
-            {% if rsvp_exists == True %}
-            <button class="bg-[#4F46E5] text-white hover:text-[#4F46E5] py-2 px-4 rounded hover:bg-indigo-200 transition duration-300 flex items-center">
-                Already RSVP
-            </button>
-                
-            {% endif %}
-            <a href="{% url 'rsvp_event' event.id %}">
+           {% if request.user in event.participant.all %}
+                    <button class= "disabled bg-gray-300  hover:text-[#4F46E5] py-2 px-4 rounded hover:bg-indigo-200 transition duration-300 flex items-center">
+                      <svg class="mr-2" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="20" height="20" viewBox="0 0 48 48">
+                      <path fill="#4caf50" d="M44,24c0,11.045-8.955,20-20,20S4,35.045,4,24S12.955,4,24,4S44,12.955,44,24z"></path><path fill="#ccff90" d="M34.602,14.602L21,28.199l-5.602-5.598l-2.797,2.797L21,33.801l16.398-16.402L34.602,14.602z"></path>
+                        </svg> RSVP'd
+                    </button>
+           {% else %}
+            <a href="{% url 'rsvp-event' event.id %}">
              <button class="bg-[#4F46E5] text-white hover:text-[#4F46E5] py-2 px-4 rounded hover:bg-indigo-200 transition duration-300 flex items-center">
                 RSVP
             </button>
            </a>
+           {% endif %}
            {% endif %}
         </div>
     </div>
